# FINAL

./: .breakpoints  descriptive.py  hw_6.py  limear.py  main.py  pyproject.toml  tic_tac_toe.py
P01 Vertical Motion [FINISHED]/: P1.1_velocity.py  P1.2_height.py  P1.3_time_top.py  P1.4_top_height.py
P02 Linear & Quadratic Equations [FINISHED]/: linear.py
P04 Simple Fraction Operations [Finished]/: fractions.py
P05 Time Measurement [FINISHED]/: P5.2.1_count_to.py  P5.3.1_count_to_erasing.py  P5.4.1_cooking_timer.py  P5.5.1_date_validity.py  P5.6.2_say_when.py  P5.6.3_lap_duration.py
P06 Grade Management/: P.6.2.3_range.py  P6.2.4_regular_average.py  P6.2.5_letter_average.py  data.xlsx
P07 Histogram/: P7 histogram (FIXING).py
P09 RPG/: P9 rpg(FIXING).py
P1 Vertical Motion [FINISHED]/: P1.2_flight_time.py
P10 Tic Tac Toe/: P10 tic.py
P2 Linear & Quadratic Equations [FINISHED]/: quadratic.py
P3 Image Processing [INCOMPATIBLE]/: image_p.py
P5 Time Measurement [FINISHED]/: P5.6.1_timed_named.py
PI Vertical Motion/: flight_time.py  height.py  top_height.py  velocity.py
