[tool.poetry]
name = "repl_python3_FINAL"
version = "0.1.0"
description = ""
authors = ["CrimsonCodex <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.1"
wrench = "^0.9.1"
Pil-Lite = "^0.1.1"
opencv-python = "^4.5.3"
seaborn = "^0.11.1"
openpyxl = "^3.0.7"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
